# worm_mem

CEL/: Pure_nomad.csv  Pure_nomad1.csv  Pure_nomad2.csv  Pure_nomad3.csv  Pure_nomad4.csv  __init__.py  best_connectome.npy  clean_requirements.txt  connectome_sparse.npz  main2.py  main3.py  main4.py  pyproject.toml  requirements.txt
CEL/Algorithms/: CMA_ES.py  Evolutionary_Algorithm.py  Hybrid_NOMAD.py  PNOMAD_Time_Analysis.py  Pure_NOMAD.py  Pure_NOMAD_EDIT.py  RandParam_50_NOMAD.py  algo_utils.py  run_from_genes.py
CEL/Worm_Env/: c_worm.py  celegan_env.py  connectome.py  weight_dict.py
CEL/algorithms/: Pure_NOMAD.py  algo_utils.py
CEL/graphs/: Graph_path_over_gen.py  connectome_graph.py  graph_video.py  graphing.py
CEL/util/: dist_dict_calc.py  findmotor_ind.py  main_utils.py  multimode.py  snip.py  write_read_txt.py
Non_Biased_Dynamic_C/: CElegansNeuronTables.xlsx  main.py
Non_Biased_Dynamic_C/Algorithms/: EVO_NOMAD.py  OaI_es.py  Pure_NOMAD.py  algo_utils.py
Non_Biased_Dynamic_C/Worm_Env/: c_worm.py  celegan_env.py  connectome.py  weight_dict.py
Non_Biased_Dynamic_C/graphs/: Graph_fitness_over_time.py  Graph_fitness_over_time_old.py  Graph_pos_over_time.py  graph_ngon_performance.py  graph_video_ngons.py  wpi.py
Non_Biased_Dynamic_C/util/: count_entries.py  main_utils.py  movie.py  read_from_xls.py  snip.py
